# ParallelHassnes

./: .gitignore  FUNCTIONALITY_SPEC.md  HHFt alpha seek.md  Implementation Plan.md  Instruction for Orchastrator.md  MANUAL_SPEC_TRACE.md  OR research.md  README.md  SPEC_ALIGNMENT_MATRIX.md  TERMINOLOGY.md  inventory+sync management.md  pyproject.toml  run_report.schema.json
examples/: launch_table.audit_fomc_liquidity_component_decomposition.json  launch_table.example.json
launch_tables/: launch_table_aaahft_alpha_bank_merge_round1_20260121T093823Z.json  launch_table_aaahft_alpha_brainstorm_round1_20260121T100354Z.json  launch_table_aaahft_alpha_brainstorm_round1_fill_gaps_20260121T104137Z.json  launch_table_aaahft_baseline_suite_round1_20260121T081136Z.json  launch_table_aaahft_lit_alpha_bank_round1_20260121T092940Z.json  launch_table_aaahft_remote_bootstrap_round1_20260121T081136Z.json  launch_table_aaahft_sweeper_fix_tradeflow_20260121T085126Z.json  launch_table_as_traded_liquidity_stack_phase1_20260118.json  launch_table_es_hft_tbbo_agents_20260120.json  launch_table_goalnew_audit_20260118_cftc.json  launch_table_goalnew_audit_20260118_v2_cftc.json  launch_table_goalnew_audit_20260118_v3_cftc.json  launch_table_hftbacktest_backtest_bugfix_round1_20260120T120849Z.json  launch_table_hftbacktest_backtest_reality_audit_5_20260120T090847Z.json  launch_table_hftbacktest_bugfix_round2_20260121T024551Z.json  launch_table_hftbacktest_engine_bugfix_8_20260121T044059Z.json  launch_table_hftbacktest_engine_review_6_20260121T040120Z.json  (+7 more)
migration/: path_migration_audit.json  (+5 more)
(+88 files in other folders)
